--- a/public/template/add_listing7.html
+++ b/public/template/add_listing7.html
@@ -35,7 +35,7 @@
 			<div class="container-fluid">
 				<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+					<button type="button" class="navbar-toggle bg-black" data-toggle="collapse" data-target=".navbar-ex1-collapse">
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -46,7 +46,7 @@
 		
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse navbar-ex1-collapse p-t-10">
-					<ul class="nav navbar-nav navbar-right f-1">
+					<ul class="nav navbar-nav navbar-right f-1 bg-white">
 						<li><a href="our_apartment2.html">Our apartment</a></li>
 						<li><a href="list_apartment.html" class="">List apartment</a></li>
 
@@ -69,7 +69,7 @@
 				<div class="row">
 					<div class="col-md-2"></div>
 					<div class="col-md-8">
-						<ul class="nav navbar-nav">
+						<ul class="nav navbar-nav bg-white">
 							<li class="active c-brown">
 								<a href="user_profile_listing.html">Listings</a>
 							</li>
@@ -167,7 +167,7 @@
 								</div>
 							</div>
 							<div class="col-md-5">
-								<button type="submit" class="h-35 bgc f-16 w-500 no-bd c-white bd-4 mwidth-100 width-130 text-center" name="">Subscribe</button>
+								<a href="" type="submit" class="h-35 bg-brown f-16 w-500 no-bd c-white bd-4 mwidth-100 width-130 text-center dis-inline-b p-t-5" name="">Subscribe</a>
 							</div>
 						</div>
 					</form>
@@ -188,7 +188,7 @@
 							<p>
 								<a href="payment.html">Payment structure</a>
 							</p>
-							<p class=""><a href=""><span> Terms of Use</span></a>
+							<p class=""><a href="term.html"><span> Terms of Use</span></a>
 							</p>
 						</div>
 
