--- a/public/template/assets/css/index.css
+++ b/public/template/assets/css/index.css
@@ -1,4 +1,4 @@
-   /*@font-face{
+ /*@font-face{
 	font-family: 'Avenir';
 	src: url('../../Avenir/AvenirLTStd-Book.otf');
 	src: url('../../Avenir/AvenirLTStd-Light.otf');
@@ -94,6 +94,16 @@ body {
 }
 .about-bg{
 	background-image:url(../img/about.png) !important;
+}
+
+/*.bg-signup{
+	background-image: linear-gradient(135deg, rgba(158, 15, 184, 0.7) -10%, rgba(5, 232, 255, 0.8) 135%),url(../img/inside.jpg);
+}*/
+
+
+.bg-signup{
+	background-image:url(../img/housea.jpeg);
+	background-size: cover;
 }
 .sponsor-bg {
 	width:100%;
@@ -223,6 +233,14 @@ body {
     outline:0;
     -webkit-box-shadow:inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(254, 86, 33, .6) !important;
     box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 2px rgba(0, 0, 0, .6) !important;
+}
+
+.form-group1 .form-control:focus {
+    border:none!important;
+    outline:0;
+    -webkit-box-shadow:none !important;
+    box-shadow: none !important;
+    border-bottom:1px solid brown !important;
 }
 
 
@@ -359,6 +377,66 @@ a.thumbnail.active, a.thumbnail:focus, a.thumbnail:hover {
 	height: 24px;
 	padding-top: 2px;
 }
+
+
+/*social icons*/
+.social {
+    margin: 0;
+    padding: 0;
+}
+
+.social ul {
+    margin: 0;
+    padding: 5px;
+}
+
+.social ul li {
+    margin: 5px;
+    list-style: none outside none;
+    display: inline-block;
+}
+
+.social i {
+    width: 40px;
+    height: 40px;
+    color: #FFF;
+    background-color: #909AA0;
+    font-size: 22px;
+    text-align:center;
+    padding-top: 12px;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -o-border-radius: 50%;
+    transition: all ease 0.3s;
+    -moz-transition: all ease 0.3s;
+    -webkit-transition: all ease 0.3s;
+    -o-transition: all ease 0.3s;
+    -ms-transition: all ease 0.3s;
+}
+
+.social i:hover {
+    color: #FFF;
+    text-decoration: none;
+    transition: all ease 0.3s;
+    -moz-transition: all ease 0.3s;
+    -webkit-transition: all ease 0.3s;
+    -o-transition: all ease 0.3s;
+    -ms-transition: all ease 0.3s;
+}
+
+.social .fa-facebook:hover {
+    background: #4060A5;
+}
+
+.social .fa-twitter:hover {
+    background: #00ABE3;
+}
+
+.social .fa-google-plus:hover {
+    background: #e64522;
+}
+/*end*/
 
 
 
@@ -984,6 +1062,9 @@ input[type="date"]:hover ~ .calendar_index{
     left: 77px;
     bottom: -9px;
 }
+
+/****  Top  ****/
+.mt-_14 { top:-14px; }
 
 
 	.mp-l-0{padding-left:0px !important;}
