--- a/public/template/edit_listing.html
+++ b/public/template/edit_listing.html
@@ -47,7 +47,7 @@
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse navbar-ex1-collapse p-t-10">
 					<ul class="nav navbar-nav navbar-right f-1 bg-white">
-						<li><a href="our_apartment2.html">Our homes</a></li>
+						<li><a href="our_apartment2.html">Our apartment</a></li>
 						<li><a href="list_apartment.html" class="">List apartment</a></li>
 
 						<li class="dropdown">
@@ -67,22 +67,25 @@
 		<div class="navbar m-b-0">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-4"></div>
-					<div class="col-md-4">
+					<div class="col-md-2"></div>
+					<div class="col-md-8">
 						<ul class="nav navbar-nav bg-white">
-							<li class="">
-								<a href="viewing_request.html">Viewing</a>
+							<li class="active c-brown">
+								<a href="user_profile_listing.html">Listings</a>
 							</li>
-							<li class="p-l-26 mp-l-0">
-								<a href="list_apartment.html">Apartments</a>
+							<li class="p-l-45 mp-l-0">
+								<a href="viewing_request.html">Viewing requests</a>
+							</li>
+							<li class="p-l-45 mp-l-0 ">
+								<a href="booking_request.html">Booking requests</a>
 							</li>
 
-							<li class="p-l-26 mp-l-0 active c-brown">
-								<a href="setting_page.html">Settings</a>
+							<li class="p-l-45 mp-l-0">
+								<a href="transaction.html">Transactions</a>
 							</li>
 						</ul>
 					</div>
-					<div class="col-md-4"></div>
+					<div class="col-md-2"></div>
 				</div>
 			</div>
 		</div>
@@ -92,87 +95,111 @@
 
 	<section>
 		<div class="container">
+			<ol class="breadcrumb bg-trans">
+				<li class=" active c-brown"><a href="#">Your listings</a></li>
+				<li class="bgyco">2 bedroom, 2 Kolade Street, Lekki phase , Lagos</li>
+			</ol>
 			<div class="row">
 				<div class="col-md-3">
 					<div class="bd-brand">
 						<p class="p-l-10 p-18 h-50 "><a href="user_profile.html"> Dashboard</p></a>
 					</div>
 					<div class="bd-brand">
-						<p class="p-l-10 p-18 h-50 c-brown"><a href="viewing_page.html"> Rent Apartments</p></a>
+						<p class="p-l-10 p-18 h-50 "><a href="viewing_page.html"> My apartments</p></a>
 					</div>
 					<div class="bd-brand">
-						<p class="p-l-10 p-18 h-50 "><a href="user_profile_listing.html"> List Apartments</p></a>
+						<p class="p-l-10 p-18 h-50 c-brown"><a href="user_profile_listing.html"> My Listing</p></a>
 					</div>
 				</div>
 
 				<div class="col-md-8">
 					<div class="bd-brand">
 						<div class="container width-1000 m-l-36 mwidth-100 mm-l-0">
-							
-							<div class="row">
-								<div class="col-md-6">
-									<p class="f-24 w-900 m-t-20">Email notifications</p>
-								</div>
-								<div class="col-md-6">
-									<p class="c-brown m-t-20 m-l-18p mm-l-0"><a href="#">Edit</a></p>
-								</div>
-							</div>
+							<p class="f-24 w-900 m-t-20">Your Listings</p>
 							<hr class="m-r-37p m-t-0 mm-r-0">
 							<div class="row">
-								<div class="col-md-3">
-									<p>I want to receive notifications of:</p>
+								<div class="col-md-4 width-296">
+									<img src="assets/img/apartments.jpg" class="width-263 h-204 mwidth-100 img-rounded twidth-100p">
 								</div>
-								<div class="col-md-9">
-									<div class="checkbox m-t-0">
-										<input type="checkbox" id="check1">
-										<label for="check1">
-											<span class="p-l-10"> New apartment listings </span>
-										</label>
-									</div>
+								<div class="col-md-8">
+									<p class="">2 bedroom apartment<br>42 Montgomery street, Yaba, Lagos</p>
 
-									<div class="checkbox m-t-20">
-										<input type="checkbox" id="check2">
-										<label for="check2">
-											<span class="p-l-10"> Price reductions </span>
-										</label>
-									</div>
+									<p class="c-brown"><a href="edit_listing1.html">Where is your place located?</a></p>
+									<p class="c-brown"><a href="edit_listing2.html">Tell us about your place</a></p>
+									<p class="c-brown"><a href="edit_listing3.html">What does your place have?</a></p>
+									<p class="c-brown"><a href="edit_listing4.html">What amenities does your place have?</a></p>
+									<p class="c-brown"><a href="edit_listing5.html">Guest requirements and house rules</a></p>
+									<p class="c-brown"><a href="edit_listing6.html">How long can guests stay for?</a></p>
+									<p class="c-brown"><a href="edit_listing7.html">How much do you want to charge?</a></p>
+									<p class="c-brown"><a href="edit_listing8.html">When can people come and view your flat?</a></p>
+									<p class="c-brown"><a href="edit_listing9.html">Book your inspection</a></p>
+								</div>
+							</div>
 
-									<div class="checkbox m-t-20">
-										<input type="checkbox" id="check3">
-										<label for="check3">
-											<span class="p-l-10"> Move in and viewing reminders </span>
-										</label>
-									</div>
+							<!-- <br><br>
+							<div class="row">
+								<div class="col-md-4 width-296">
+									<img src="assets/img/inside.jpg" class="width-263 h-204 mwidth-100 img-rounded twidth-100p">
+								</div>
+								<div class="col-md-8">
+									<p class="">2 bedroom apartment<br>13 Bolanle street, Ikeja, Lagos</p>
 
-									<div class="checkbox m-t-20">
-										<input type="checkbox" id="check4">
-										<label for="check4">
-											<span class="p-l-10">When my apartment has been listed </span>
-										</label>
+									<div class="row m-t-10">
+										<div class="col-md-2 col-xs-6">
+											<select name="" id="input" class="form-control  width-117 mwidth-127 h-32 c-brown bd-brandb text-center w-900" required="required">
+												<option value="">Unlisted</option>
+												<option value="2">List</option>
+												<option value="4">Archive</option>
+											</select>
+										</div>
+										<div class="col-md-3 col-xs-6">
+											<a href="#"><button class="bgcy bd-brandb bg-white width-117 mwidth-127 h-32 m-l-20 mm-l-0 w-900">Preview</button></a>
+										</div>
+										<div class="col-md-7"></div>
+									</div>
+								</div>
+							</div>
+
+							<br><br>
+							<div class="row">
+								<div class="col-md-4 width-296">
+									<img src="assets/img/good.jpg" class="width-263 h-204 mwidth-100 img-rounded twidth-100p">
+								</div>
+								<div class="col-md-8">
+									<p class="">2 bedroom apartment<br>14 Lateef jakande street, Ikeja, Lagos</p>
+
+									<div class="row m-t-10">
+										<div class="col-md-2 col-xs-6">
+											<select name="" id="input" class="form-control  width-117 mwidth-127 h-32 c-brown bd-brandb text-center w-900" required="required">
+												<option value="">Archive</option>
+												<option value="2">List</option>
+												<option value="4">Unlisted</option>
+											</select>
+										</div>
+										<div class="col-md-3 col-xs-6">
+											<a href="#"><button class="bgcy bd-brandb bg-brown c-white width-117 mwidth-127 h-32 m-l-20 mm-l-0 ">Confirm</button></a>
+										</div>
+										<div class="col-md-7"></div>
 									</div>
 								</div>
 							</div>
 							<br><br>
 
-							<div class="row">
-								<div class="col-md-6">
-									<p class="f-24 w-900 m-t-20">Card details</p>
-								</div>
-							</div>
+							<p class="f-24 w-900 m-t-20">Add listings</p>
 							<hr class="m-r-37p m-t-0 mm-r-0">
-							<a href=""><p class="c-brown">Change card details</p></a>
-							<br><br>
+							<br>
 							<div class="row">
-								<div class="col-md-2"></div>
-								<div class="col-md-4">
-								<form class="form-inline m-t-64 mm-t-8 " action="apartment_details.php" method="post">
-
-									<button type="submit" class="width-263 h-48 bgc f-18 w-500 no-bd c-white bd-4 mm-l-0 mwidth-100 text-center" name="">Save</button>	
-								</form>
+								<div class="col-md-7">
+									<a href="add_listing.html"><div  class="bd-brand1 width-612 mwidth-100 p-l-50 p-t-15 p-b-15">
+										<span class="reft">
+											<i class="fa fa-plus fa-2x c-brown"></i>
+											
+										</span><span class="f-24 c-brown">Add a listing</span>
+									</div></a>
 								</div>
-								<div class="col-md-6"></div>
-								</div> 
-							<br><br>
+								<div class="col-md-5"></div>
+							</div> -->
+							<br><br><br>
 						</div>
 					</div>
 				</div>
@@ -181,6 +208,8 @@
 			</div>
 		</div>
 	</section>
+
+
 
 	<footer class="nb-footer">
 		<div class="container">
