--- a/public/template/edit_user_profile.html
+++ b/public/template/edit_user_profile.html
@@ -281,7 +281,7 @@
 								</div>
 							</div>
 							<div class="col-md-5">
-								<button type="submit" class="h-35 bgc f-16 w-500 no-bd c-white bd-4 mwidth-100 width-130 text-center" name="">Subscribe</button>
+								<a href="" type="submit" class="h-35 bg-brown f-16 w-500 no-bd c-white bd-4 mwidth-100 width-130 text-center dis-inline-b p-t-5" name="">Subscribe</a>
 							</div>
 						</div>
 					</form>
