--- a/public/template/user_apartment.html
+++ b/public/template/user_apartment.html
@@ -35,18 +35,19 @@
 			<div class="container-fluid">
 				<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+					<button type="button" class="navbar-toggle bg-black" data-toggle="collapse" data-target=".navbar-ex1-collapse">
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
+						
 					</button>
 					<a class="navbar-brand m-l-32 m-t-0 h-36 f-40 c-bck" href="index.html"><p class="flat">Flat<span class="c-grey">Hub</span></p></a>
 				</div>
 		
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse navbar-ex1-collapse p-t-10">
-					<ul class="nav navbar-nav navbar-right f-1">
+					<ul class="nav navbar-nav navbar-right f-1 bg-white">
 						<li><a href="our_apartment2.html">Our homes</a></li>
 						<li><a href="list_apartment.html" class="">List apartment</a></li>
 
@@ -69,16 +70,16 @@
 				<div class="row">
 					<div class="col-md-4"></div>
 					<div class="col-md-4">
-						<ul class="nav navbar-nav">
+						<ul class="nav navbar-nav bg-white">
 							<li class="">
-								<a href="#">Viewing</a>
+								<a href="viewing_request.html">Viewing</a>
 							</li>
 							<li class="p-l-26 mp-l-0 active c-brown">
-								<a href="#">Apartments</a>
+								<a href="list_apartment.html">Apartments</a>
 							</li>
 
 							<li class="p-l-26 mp-l-0">
-								<a href="#">Settings</a>
+								<a href="setting_page.html">Settings</a>
 							</li>
 						</ul>
 					</div>
@@ -95,13 +96,13 @@
 			<div class="row">
 				<div class="col-md-3">
 					<div class="bd-brand">
-						<p class="p-l-10 p-18 h-50">Dashboard</p>
+						<p class="p-l-10 p-18 h-50"><a href="user_profile.html"> Dashboard</p></a>
 					</div>
 					<div class="bd-brand">
-						<p class="p-l-10 p-18 h-50 c-brown">Rent Apartments</p>
+						<p class="p-l-10 p-18 h-50 c-brown"><a href="viewing_page.html"> Rent Apartments</p></a>
 					</div>
 					<div class="bd-brand">
-						<p class="p-l-10 p-18 h-50">List Apartments</p>
+						<p class="p-l-10 p-18 h-50"><a href="user_profile_listing.html"> List Apartments</p></a>
 					</div>
 				</div>
 
@@ -264,7 +265,7 @@
 								</div>
 							</div>
 							<div class="col-md-5">
-								<button type="submit" class="h-35 bgc f-16 w-500 no-bd c-white bd-4 mwidth-100 width-130 text-center" name="">Subscribe</button>
+								<a href="" type="submit" class="h-35 bg-brown f-16 w-500 no-bd c-white bd-4 mwidth-100 width-130 text-center dis-inline-b p-t-5" name="">Subscribe</a>
 							</div>
 						</div>
 					</form>
@@ -274,18 +275,18 @@
 				<div class="col-md-7 col-sm-12 ">
 					<div class="row footer-info-single">
 						<div class="col-md-4">
-							<a href="about.html#about"><p class="">About Us</p></a>
+							<a href="about.html"><p class="">About Us</p></a>
 
-							<a href="about.html#contact"><p class="">Contact us</p></a>
+							<a href="contact.html"><p class="">Contact us</p></a>
 
-							<a href="about.html#faq"><p class="">Faq's </p></a>
+							<a href="faq.html"><p class="">Faq's </p></a>
 						</div>
 
 						<div class="col-md-4">
 							<p>
 								<a href="">Payment structure</a>
 							</p>
-							<p class=""><a href="about.html#term"><span> Terms of Use</span></a>
+							<p class=""><a href="term.html"><span> Terms of Use</span></a>
 							</p>
 						</div>
 
