--- a/public/template/viewing_page_new_user.html
+++ b/public/template/viewing_page_new_user.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -63,67 +63,63 @@
 				</div><!-- /.navbar-collapse -->
 			</div>
 		</nav>
-	</header>
 
-	<section>
 		<div class="navbar m-b-0">
-			<div class="row">
+			<div class="container">
+				<div class="row">
 					<div class="col-md-4"></div>
 					<div class="col-md-4">
 						<ul class="nav navbar-nav bg-white">
-							<li class="">
-								<a href="viewing_request.html">Viewing</a>
+							<li class="active c-brown">
+								<a href="viewing_page.html">Viewings</a>
 							</li>
-							<li class="p-l-26 mp-l-0">
-								<a href="">Apartments</a>
+							<li class="p-l-26 mp-l-0 ">
+								<a href="list_apartment.html">Apartments</a>
 							</li>
 
-							<li class="p-l-26 mp-l-0 active">
-								<a href="">Settings</a>
+							<li class="p-l-26 mp-l-0">
+								<a href="setting_page.html">Settings</a>
 							</li>
 						</ul>
 					</div>
 					<div class="col-md-4"></div>
+				</div>
 			</div>
 		</div>
+	</header>
 
+	<hr class="m-t-0">
 
-		<hr class="m-t-0 m-b-0">
+	<section>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-3">
+					<div class="bd-brand">
+						<p class="p-l-10 p-18 h-50 "><a href="user_profile.html"> Dashboard</p></a>
+					</div>
+					<div class="bd-brand">
+						<p class="p-l-10 p-18 h-50 c-brown"><a href="user_apartment.html"> My Apartments</p></a>
+					</div>
+					<div class="bd-brand">
+						<p class="p-l-10 p-18 h-50"><a href="user_profile_listing.html"> My Listing</p></a>
+					</div>
+				</div>
 
-		<div class="">
-			<div class="alert alert-danger alert-dismissable fade in bg-red1 c-white text-center p-t-10 h-40 mh-100p">
-				<a href="#" class="close c-red h-20 width-20 bd-50p bg-white opacity-12" data-dismiss="alert" aria-label="close">&times;</a>
-				<p>You must be verified before you can pay for this apartment.</p>
+				<div class="col-md-8">
+					<div class="bd-brand">
+						<div class="container width-1000 m-l-36 mwidth-100 mm-l-0">
+							<p class="f-24 w-900 m-t-20">Upcoming viewing</p>
+							<hr class="m-r-37p m-t-0 mm-r-0">
+							<p class="c-gray">No upcoming viewings</p>
+							<br><br>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-1"></div>
 			</div>
 		</div>
-		<br><br><br><br><br><br>
-
-		<div class="">
-			<div class="alert alert-danger alert-dismissable fade in bg-red1 c-white text-center p-t-10 h-40 mh-100p">
-				<a href="#" class="close c-red h-20 width-20 bd-50p bg-white opacity-12" data-dismiss="alert" aria-label="close">&times;</a>
-				<p>Your prorile must be 80% complete before you can book or list apartments.</p>
-			</div>
-		</div>
-		<br><br><br><br><br><br>
-
-		<div class="">
-			<div class="alert alert-danger alert-dismissable fade in bg-red1 c-white text-center p-t-10 h-40 mh-100p">
-				<a href="#" class="close c-red h-20 width-20 bd-50p bg-white opacity-12" data-dismiss="alert" aria-label="close">&times;</a>
-				<p>Your prorile must be 80% complete before you can book or list apartments.</p>
-			</div>
-		</div>
-		<br><br><br><br><br><br>
-
-		<div class="">
-			<div class="alert alert-danger alert-dismissable fade in bg-red1 c-white text-center p-t-10 h-40 mh-100p">
-				<a href="#" class="close c-red h-20 width-20 bd-50p bg-white opacity-12" data-dismiss="alert" aria-label="close">&times;</a>
-				<p>Your prorile must be 80% complete before you can book or list apartments.</p>
-			</div>
-		</div>
-		<br><br><br><br><br><br>
 	</section>
-
-				
 
 	<footer class="nb-footer">
 		<div class="container">
