--- a/public/template/about.html
+++ b/public/template/about.html
@@ -35,7 +35,7 @@
 			<div class="container-fluid">
 				<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+					<button type="button" class="navbar-toggle bg-black" data-toggle="collapse" data-target=".navbar-ex1-collapse">
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -46,7 +46,7 @@
 		
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse navbar-ex1-collapse p-t-10">
-					<ul class="nav navbar-nav navbar-right f-1">
+					<ul class="nav navbar-nav navbar-right f-1 bg-white">
 						<li><a href="our_apartment2.html">Our apartment</a></li>
 						<li><a href="list_apartment.html" class="">List apartment</a></li>
 
@@ -69,7 +69,7 @@
 				<div class="row">
 					<div class="col-md-2"></div>
 					<div class="col-md-8">
-						<ul class="nav navbar-nav">
+						<ul class="nav navbar-nav bg-white">
 							<li class="p-l-40 mp-l-0 active c-brown">
 								<a href="about.html">About us</a>
 							</li>
