--- a/public/template/add_listing8.html
+++ b/public/template/add_listing8.html
@@ -35,7 +35,7 @@
 			<div class="container-fluid">
 				<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+					<button type="button" class="navbar-toggle bg-black" data-toggle="collapse" data-target=".navbar-ex1-collapse">
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -46,7 +46,7 @@
 		
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse navbar-ex1-collapse p-t-10">
-					<ul class="nav navbar-nav navbar-right f-1">
+					<ul class="nav navbar-nav navbar-right f-1 bg-white">
 						<li><a href="our_apartment2.html">Our apartment</a></li>
 						<li><a href="list_apartment.html" class="">List apartment</a></li>
 
@@ -69,7 +69,7 @@
 				<div class="row">
 					<div class="col-md-2"></div>
 					<div class="col-md-8">
-						<ul class="nav navbar-nav">
+						<ul class="nav navbar-nav bg-white">
 							<li class="active c-brown">
 								<a href="user_profile_listing.html">Listings</a>
 							</li>
@@ -109,20 +109,41 @@
 							<div class="col-md-10">
 								<h3 class="">How much do you want to charge?</h3>
 								<div class="row">
-									<div class="col-md-5">
+									<div class="col-md-11">
 										<div class="row">
-											<div class="col-md-6">
+											<div class="col-md-2">
 												<div class="form-group">
 													<input type="text" name="" placeholder="e.g &#8358;50000" class=" form-control bd-brandb c-brown" required="required">
 												</div>
 											</div>
-											<div class="col-md-6">
+											<div class="col-md-2">
 												<p>per month</p>
 											</div>
+
+											<div class="col-md-2">
+												<div class="form-group">
+													<input type="text" name="" placeholder="e.g &#8358;30000" class=" form-control bd-brandb c-brown" required="required">
+												</div>
+											</div>
+											<div class="col-md-2">
+												<p>Deposity Amount</p>
+											</div>
+
+											<div class="col-md-2">
+												<div class="form-group">
+													<select name="" id="input" class="form-control bd-brandb c-brown" required="required">
+														<option value="">1</option>
+														<option value="">2</option>
+														<option value="">3</option>
+													</select>
+												</div>
+											</div>
+											<div class="col-md-2">
+												<p>Minimum let period</p>
+											</div>
 										</div>
-										
 									</div>
-									<div class="col-md-7"></div>	
+									<div class="col-md-1"></div>	
 								</div>
 							</div>
 							<div class="col-md-1"></div>
@@ -164,7 +185,7 @@
 								</div>
 							</div>
 							<div class="col-md-5">
-								<button type="submit" class="h-35 bgc f-16 w-500 no-bd c-white bd-4 mwidth-100 width-130 text-center" name="">Subscribe</button>
+								<a href="" type="submit" class="h-35 bg-brown f-16 w-500 no-bd c-white bd-4 mwidth-100 width-130 text-center dis-inline-b p-t-5" name="">Subscribe</a>
 							</div>
 						</div>
 					</form>
@@ -185,7 +206,7 @@
 							<p>
 								<a href="payment.html">Payment structure</a>
 							</p>
-							<p class=""><a href=""><span> Terms of Use</span></a>
+							<p class=""><a href="term.html"><span> Terms of Use</span></a>
 							</p>
 						</div>
 
