--- a/public/template/edit_listing2.html
+++ b/public/template/edit_listing2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -47,7 +47,7 @@
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse navbar-ex1-collapse p-t-10">
 					<ul class="nav navbar-nav navbar-right f-1 bg-white">
-						<li><a href="our_apartment2.html">Our homes</a></li>
+						<li><a href="our_apartment2.html">Our apartment</a></li>
 						<li><a href="list_apartment.html" class="">List apartment</a></li>
 
 						<li class="dropdown">
@@ -63,68 +63,99 @@
 				</div><!-- /.navbar-collapse -->
 			</div>
 		</nav>
-	</header>
 
-	<section>
 		<div class="navbar m-b-0">
-			<div class="row">
-					<div class="col-md-4"></div>
-					<div class="col-md-4">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-2"></div>
+					<div class="col-md-8">
 						<ul class="nav navbar-nav bg-white">
-							<li class="">
-								<a href="viewing_request.html">Viewing</a>
+							<li class="active c-brown">
+								<a href="user_profile_listing.html">Listings</a>
 							</li>
-							<li class="p-l-26 mp-l-0">
-								<a href="">Apartments</a>
+							<li class="p-l-45 mp-l-0">
+								<a href="viewing_request.html">Viewing requests</a>
+							</li>
+							<li class="p-l-45 mp-l-0 ">
+								<a href="booking_request.html">Booking requests</a>
 							</li>
 
-							<li class="p-l-26 mp-l-0 active">
-								<a href="">Settings</a>
+							<li class="p-l-45 mp-l-0">
+								<a href="transaction.html">Transactions</a>
 							</li>
 						</ul>
 					</div>
-					<div class="col-md-4"></div>
+					<div class="col-md-2"></div>
+				</div>
 			</div>
 		</div>
+	</header>
+
+	<hr class="m-t-0">
 
 
-		<hr class="m-t-0 m-b-0">
+	<section>
+		<ol class="breadcrumb bg-trans">
+		  <li class="bgyco"><a href="#">Listins</a></li>
+		  <li class="active c-brown">Add a listing</li>
+		</ol>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-1"></div>
+				<div class="col-md-10 bd-brandf ">
+					<form action="#">
+						<div class="row">
+							<div class="col-md-1"></div>
+							<div class="col-md-10">
+								<h3 class="">Tell us about your place</h3>
+								<div class="row">
+									<div class="col-md-5">
+										<div class="form-group">
+											<textarea name="" id="input" class="form-control bd-brandb c-brown" rows="3" placeholder="Tell guests about your place" required="required"></textarea>
+										</div>
+									</div>
+									<div class="col-md-7"></div>	
+								</div>
+							</div>
+							<div class="col-md-1"></div>
+						</div>
 
-		<div class="">
-			<div class="alert alert-danger alert-dismissable fade in bg-red1 c-white text-center p-t-10 h-40 mh-100p">
-				<a href="#" class="close c-red h-20 width-20 bd-50p bg-white opacity-12" data-dismiss="alert" aria-label="close">&times;</a>
-				<p>You must be verified before you can pay for this apartment.</p>
+						<div class="row">
+							<div class="col-md-1"></div>
+							<div class="col-md-10">
+								<h3 class="">Name your place </h3>
+								<div class="row">
+									<div class="col-md-5">
+										<div class="form-group">
+											<input type="text" name="" placeholder="e.g 2 bedroom apartment in sabo yaba" class=" form-control" required="required">
+										</div>
+									</div>
+									<div class="col-md-7"></div>	
+								</div>
+							</div>
+							<div class="col-md-1"></div>
+						</div>
+
+						<div class="row m-t-30 m-b-30">
+							<div class="col-md-1"></div>
+							<div class="col-md-10">
+								<div class="row">
+									<div class="col-md-3 mm-t-8">
+										<button type="submit" class="bg-brown f-16 w-500 no-bd c-white bd-4 text-center width-100p" name="">Save</button>
+									</div>
+									<div class="col-md-6"></div>	
+								</div>
+							</div>
+							<div class="col-md-1"></div>
+						</div>
+					</form>
+				</div>
+				<div class="col-md-1"></div>
 			</div>
 		</div>
-		<br><br><br><br><br><br>
-
-		<div class="">
-			<div class="alert alert-danger alert-dismissable fade in bg-red1 c-white text-center p-t-10 h-40 mh-100p">
-				<a href="#" class="close c-red h-20 width-20 bd-50p bg-white opacity-12" data-dismiss="alert" aria-label="close">&times;</a>
-				<p>Your prorile must be 80% complete before you can book or list apartments.</p>
-			</div>
-		</div>
-		<br><br><br><br><br><br>
-
-		<div class="">
-			<div class="alert alert-danger alert-dismissable fade in bg-red1 c-white text-center p-t-10 h-40 mh-100p">
-				<a href="#" class="close c-red h-20 width-20 bd-50p bg-white opacity-12" data-dismiss="alert" aria-label="close">&times;</a>
-				<p>Your prorile must be 80% complete before you can book or list apartments.</p>
-			</div>
-		</div>
-		<br><br><br><br><br><br>
-
-		<div class="">
-			<div class="alert alert-danger alert-dismissable fade in bg-red1 c-white text-center p-t-10 h-40 mh-100p">
-				<a href="#" class="close c-red h-20 width-20 bd-50p bg-white opacity-12" data-dismiss="alert" aria-label="close">&times;</a>
-				<p>Your prorile must be 80% complete before you can book or list apartments.</p>
-			</div>
-		</div>
-		<br><br><br><br><br><br>
 	</section>
 
-				
-
+	
 	<footer class="nb-footer">
 		<div class="container">
 			<div class="row m-t-62">
@@ -181,21 +212,7 @@
 	<script type="text/javascript" src="libraries/bootstrap/js/jquery-3.1.1.min.js"></script>
 	<script type="text/javascript" src="libraries/bootstrap/js/jquery.min.js"></script>
 	<script src="libraries/bootstrap/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="libraries/bootstrap/js/book_viewing.js"></script>
-	<script type="text/javascript" src="assets/js/registrationformvalidation.js"></script>
-	<script type="text/javascript" src="assets/js/listing.js"></script>
-	<script type="text/javascript" src="assets/js/custom.js"></script>
-	<!-- <script type="text/javascript">
-		$('ul.foot li a').on('click', function(e){
-			$(".nav.nav-pills").find('.active').removeClass('active');
-			$(".tab-content").find('.active').removeClass('active');
-			// console.log($(this).attr('href'));
-			var link = $(this).attr('href');
-			
-			
-			$(link).addClass('active');
-		})
-	</script> -->
+	<script type="text/javascript" src="assets/js/fqshowhide.js"></script>
 	
 
 </body>
