--- a/public/template/our_apartment2.html
+++ b/public/template/our_apartment2.html
@@ -30,7 +30,7 @@
 			<div class="container-fluid">
 				<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+					<button type="button" class="navbar-toggle bg-black" data-toggle="collapse" data-target=".navbar-ex1-collapse">
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -41,7 +41,7 @@
 		
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse navbar-ex1-collapse p-t-10">
-					<ul class="nav navbar-nav navbar-right f-1">
+					<ul class="nav navbar-nav navbar-right f-1 bg-white">
 						<li><a href="our_apartment2.html" class="c-brown">Our apartments</a></li>
 						<li><a href="list_apartment.html">List apartment</a></li>
 
@@ -57,7 +57,7 @@
 										<div class="">
 											<p class="text-center f-18 p-10">Sign up to FlatHub and find a great apartment</p>
 				 
-											<button type="" class="h-48 bg-blue f-16 w-500 no-bd c-white bd-4 p-l-10 mwidth-100 width-300 m-l-13 mm-l-0"><i class="fa fa-facebook"></i> Sign up with Facebook</button>
+											<a href="" type="button" class="h-48 bg-blue f-16 w-500 no-bd c-white bd-4 p-t-10 text-center mwidth-100 width-300 m-l-13 mm-l-0 dis-inline-b"><i class="fa fa-facebook"></i> Sign up with Facebook</a>
 
 
 											<div class="login-or">
@@ -108,7 +108,7 @@
 									<div class="">
 										<p class="text-center f-18 p-10 mp-0 mf-12">Sign up to FlatHub and find a great apartment</p>
 			 							
-			 							<button type="" class="h-48 bg-blue f-16 w-500 no-bd c-white bd-4 p-l-10 mwidth-100 width-300 m-l-13 mm-l-0 mh-35 mf-12"><i class="fa fa-facebook"></i> Sign up with Facebook</button>
+			 							<a href="" type="button" class="h-48 bg-blue f-16 w-500 no-bd c-white bd-4 p-t-10 text-center mwidth-100 width-300 m-l-13 mm-l-0 dis-inline-b"><i class="fa fa-facebook"></i> Sign up with Facebook</a>
 
 										<div class="login-or">
 											<hr class="hr-or">
@@ -272,7 +272,7 @@
 								</div>
 							</div>
 							<div class="col-md-5">
-								<button type="submit" class="h-35 bgc f-16 w-500 no-bd c-white bd-4 mwidth-100 width-130 text-center" name="">Subscribe</button>
+								<a href="" type="submit" class="h-35 bg-brown f-16 w-500 no-bd c-white bd-4 mwidth-100 width-130 text-center dis-inline-b p-t-5" name="">Subscribe</a>
 							</div>
 						</div>
 					</form>
@@ -293,7 +293,7 @@
 							<p>
 								<a href="payment.html">Payment structure</a>
 							</p>
-							<p class=""><a href=""><span> Terms of Use</span></a>
+							<p class=""><a href="term.html"><span> Terms of Use</span></a>
 							</p>
 						</div>
 
