--- a/public/template/term.html
+++ b/public/template/term.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -47,7 +47,7 @@
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse navbar-ex1-collapse p-t-10">
 					<ul class="nav navbar-nav navbar-right f-1 bg-white">
-						<li><a href="our_apartment2.html">Our homes</a></li>
+						<li><a href="our_apartment2.html">Our apartment</a></li>
 						<li><a href="list_apartment.html" class="">List apartment</a></li>
 
 						<li class="dropdown">
@@ -63,68 +63,63 @@
 				</div><!-- /.navbar-collapse -->
 			</div>
 		</nav>
-	</header>
 
-	<section>
 		<div class="navbar m-b-0">
-			<div class="row">
-					<div class="col-md-4"></div>
-					<div class="col-md-4">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-2"></div>
+					<div class="col-md-8">
 						<ul class="nav navbar-nav bg-white">
-							<li class="">
-								<a href="viewing_request.html">Viewing</a>
+							<li class="p-l-40 mp-l-0">
+								<a href="about.html">About us</a>
 							</li>
-							<li class="p-l-26 mp-l-0">
-								<a href="">Apartments</a>
+							<li class="p-l-40 mp-l-0 ">
+								<a href="contact.html">Contact us</a>
 							</li>
 
-							<li class="p-l-26 mp-l-0 active">
-								<a href="">Settings</a>
+							<li class="p-l-40 mp-l-0 ">
+								<a href="faqs.html">Faq's</a>
+							</li>
+							<li class="p-l-40 mp-l-0 ">
+								<a href="payment.html">Payment plan</a>
+							</li>
+							<li class="p-l-40 mp-l-0 active c-brown">
+								<a href="term.html">Terms of use</a>
 							</li>
 						</ul>
 					</div>
-					<div class="col-md-4"></div>
+					<div class="col-md-2"></div>
+				</div>
 			</div>
 		</div>
+	</header>
 
+	<section>
+		<div>
+			<img src="assets/img/header@2x(4).png" class="img-responsive">
+		</div>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-1"></div>
+				<div class="col-md-10 bd-brandf m-t-5p p-40">
+					<div class="row">
+						<div class="col-md-1"></div>
+						<div class="col-md-10">
+							<h3 class="text-center">Terms of use</h3>
+							<hr>
+							<p>1. Occupants should be willing to put down an upfront payment of at least two months to get access to our wide range of apartments</p>
 
-		<hr class="m-t-0 m-b-0">
-
-		<div class="">
-			<div class="alert alert-danger alert-dismissable fade in bg-red1 c-white text-center p-t-10 h-40 mh-100p">
-				<a href="#" class="close c-red h-20 width-20 bd-50p bg-white opacity-12" data-dismiss="alert" aria-label="close">&times;</a>
-				<p>You must be verified before you can pay for this apartment.</p>
+							<p class="m-t-30">2. Employment status / stable means of income has to be confirmed as egible before transactions can be carried out</p>
+						</div>
+						<div class="col-md-1"></div>
+					</div>
+				</div>
+				<div class="col-md-1"></div>
 			</div>
 		</div>
-		<br><br><br><br><br><br>
-
-		<div class="">
-			<div class="alert alert-danger alert-dismissable fade in bg-red1 c-white text-center p-t-10 h-40 mh-100p">
-				<a href="#" class="close c-red h-20 width-20 bd-50p bg-white opacity-12" data-dismiss="alert" aria-label="close">&times;</a>
-				<p>Your prorile must be 80% complete before you can book or list apartments.</p>
-			</div>
-		</div>
-		<br><br><br><br><br><br>
-
-		<div class="">
-			<div class="alert alert-danger alert-dismissable fade in bg-red1 c-white text-center p-t-10 h-40 mh-100p">
-				<a href="#" class="close c-red h-20 width-20 bd-50p bg-white opacity-12" data-dismiss="alert" aria-label="close">&times;</a>
-				<p>Your prorile must be 80% complete before you can book or list apartments.</p>
-			</div>
-		</div>
-		<br><br><br><br><br><br>
-
-		<div class="">
-			<div class="alert alert-danger alert-dismissable fade in bg-red1 c-white text-center p-t-10 h-40 mh-100p">
-				<a href="#" class="close c-red h-20 width-20 bd-50p bg-white opacity-12" data-dismiss="alert" aria-label="close">&times;</a>
-				<p>Your prorile must be 80% complete before you can book or list apartments.</p>
-			</div>
-		</div>
-		<br><br><br><br><br><br>
 	</section>
 
-				
-
+	
 	<footer class="nb-footer">
 		<div class="container">
 			<div class="row m-t-62">
@@ -181,21 +176,7 @@
 	<script type="text/javascript" src="libraries/bootstrap/js/jquery-3.1.1.min.js"></script>
 	<script type="text/javascript" src="libraries/bootstrap/js/jquery.min.js"></script>
 	<script src="libraries/bootstrap/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="libraries/bootstrap/js/book_viewing.js"></script>
-	<script type="text/javascript" src="assets/js/registrationformvalidation.js"></script>
-	<script type="text/javascript" src="assets/js/listing.js"></script>
-	<script type="text/javascript" src="assets/js/custom.js"></script>
-	<!-- <script type="text/javascript">
-		$('ul.foot li a').on('click', function(e){
-			$(".nav.nav-pills").find('.active').removeClass('active');
-			$(".tab-content").find('.active').removeClass('active');
-			// console.log($(this).attr('href'));
-			var link = $(this).attr('href');
-			
-			
-			$(link).addClass('active');
-		})
-	</script> -->
+	<script type="text/javascript" src="assets/js/fqshowhide.js"></script>
 	
 
 </body>
