--- a/public/template/user_profile.html
+++ b/public/template/user_profile.html
@@ -63,67 +63,159 @@
 				</div><!-- /.navbar-collapse -->
 			</div>
 		</nav>
-	</header>
 
 	<section>
-		<div class="navbar m-b-0">
+		<div class="container m-t-50">
 			<div class="row">
-					<div class="col-md-4"></div>
-					<div class="col-md-4">
-						<ul class="nav navbar-nav bg-white">
-							<li class="">
-								<a href="viewing_request.html">Viewing</a>
-							</li>
-							<li class="p-l-26 mp-l-0">
-								<a href="">Apartments</a>
-							</li>
-
-							<li class="p-l-26 mp-l-0 active">
-								<a href="">Settings</a>
-							</li>
-						</ul>
+				<div class="col-md-3">
+					<div class="bd-brand">
+						<p class="p-l-10 p-18 h-50 c-brown"><a href="user_profile.html"> Dashboard</p></a>
 					</div>
-					<div class="col-md-4"></div>
+					<div class="bd-brand">
+						<p class="p-l-10 p-18 h-50 "><a href="viewing_page.html"> Rent Apartments</p></a>
+					</div>
+					<div class="bd-brand">
+						<p class="p-l-10 p-18 h-50"><a href="user_profile_listing.html"> List Apartments</p></a>
+					</div>
+				</div>
+
+				<div class="col-md-8">
+					<div class="bd-brand">
+						<div class="container width-1000 m-l-36 mwidth-100 mm-l-0">
+							
+							<div class="row">
+								<div class="col-md-6">
+									<p class="f-24 w-900 m-t-20">Personal details</p>
+								</div>
+								<div class="col-md-6">
+									<p class="c-brown m-t-20 m-l-18p mm-l-0"><a href="#">Edit</a></p>
+								</div>
+							</div>
+							<hr class="m-r-37p m-t-0 mm-r-0">
+							
+							<div class="row">
+								<div class="col-md-4 col-xs-6">
+									<p class="c-grey f-12 c-grey">Full name</p>
+									<p class="f-12 w-900">Tobi Adebola</p>
+								</div>
+								<div class="col-md-4 col-xs-6">
+									<p class="c-grey f-12 c-grey">Email</p>
+									<p class="f-12 mf-10 w-900">tobiadebola@gmail.com</p>
+								</div>
+								<div class="col-md-4"></div>
+							</div>
+
+							<div class="row">
+								<div class="col-md-4 col-xs-6">
+									<p class="c-grey f-12 c-grey">Date of birth</p>
+									<p class="f-12 w-900">12 March 1975</p>
+								</div>
+								<div class="col-md-4 col-xs-6">
+									<p class="c-grey f-12 c-grey">Gender</p>
+									<p class="f-12 w-900">Male</p>
+								</div>
+								<div class="col-md-4"></div>
+							</div>
+
+							<div class="row">
+								<div class="col-md-4 col-xs-6">
+									<p class="c-grey f-12 c-grey">Phone number</p>
+									<p class="f-12 w-900">08091234543</p>
+								</div>
+								<div class="col-md-4 col-xs-6">
+									<!-- <p class="c-grey f-12 m-b-0 c-grey">Email</p>
+									<p class="f-12 m-b-0 w-900">tobiadebola@gmail.com</p> -->
+								</div>
+								<div class="col-md-4"></div>
+							</div>
+							<br><br>
+
+							<div class="row">
+								<div class="col-md-6">
+									<p class="f-24 w-900 m-t-20">Employment details</p>
+								</div>
+								<div class="col-md-6">
+									<p class="c-brown m-t-20 m-l-18p mm-l-0"><a href="#">Edit</a></p>
+								</div>
+							</div>
+							<hr class="m-r-37p m-t-0 mm-r-0">
+							
+							<div class="row">
+								<div class="col-md-4 col-xs-6">
+									<p class="c-grey f-12 c-grey">Company name</p>
+									<p class="f-12 w-900">Shell Oil and Gas</p>
+								</div>
+								<div class="col-md-4 col-xs-6">
+									<p class="c-grey f-12 c-grey">Company phone number</p>
+									<p class="f-12 w-900">08045678912, 017102345</p>
+								</div>
+								<div class="col-md-4"></div>
+							</div>
+
+							<div class="row">
+								<div class="col-md-4 col-xs-6">
+									<p class="c-grey f-12 c-grey">Current position</p>
+									<p class="f-12 w-900">Drilling specialist</p>
+								</div>
+								<div class="col-md-4 col-xs-6">
+									<p class="c-grey f-12 c-grey">Company address</p>
+									<p class="f-12 w-900">24 Ozumba Mbadiwe, Lekki, Lagos</p>
+								</div>
+								<div class="col-md-4"></div>
+							</div>
+							<br><br>
+
+							<div class="row">
+								<div class="col-md-6">
+									<p class="f-24 w-900 m-t-20">Verification</p>
+								</div>
+								<div class="col-md-6">
+									<p class="c-brown m-t-20 m-l-18p mm-l-0"><a href="#">Edit</a></p>
+								</div>
+							</div>
+							<hr class="m-r-37p m-t-0 mm-r-0">
+							
+							<div class="row">
+								<div class="col-md-4 col-xs-6">
+									<p class="c-grey f-12 c-grey">BVN:</p>
+									<p class="f-12 w-900">****** (Optional)</p>
+								</div>
+								<div class="col-md-4 col-xs-6">
+									<p class="c-grey f-12 c-grey">ID verification:</p>
+									<span class="reft">
+										<span class="f-18 c-brown">Choose file</span>
+										<input type="file" class="form-control">
+									</span>
+								</div>
+								<div class="col-md-4"></div>
+							</div>
+
+							<div class="row">
+								<div class="col-md-4 col-xs-6">
+									<p class="c-grey f-12 c-grey">Employment Verification:</p>
+									<span class="reft">
+										<span class="f-18 c-brown">Choose file</span>
+										<input type="file" class="form-control">
+									</span>
+								</div>
+								<div class="col-md-4 col-xs-6">
+									<p class="c-grey f-12 c-grey">Income verification:</p>
+									<span class="reft">
+										<span class="f-18 c-brown">Choose file</span>
+										<input type="file" class="form-control">
+									</span>
+								</div>
+								<div class="col-md-4"></div>
+							</div>
+							<br>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-1"></div>
 			</div>
 		</div>
-
-
-		<hr class="m-t-0 m-b-0">
-
-		<div class="">
-			<div class="alert alert-danger alert-dismissable fade in bg-red1 c-white text-center p-t-10 h-40 mh-100p">
-				<a href="#" class="close c-red h-20 width-20 bd-50p bg-white opacity-12" data-dismiss="alert" aria-label="close">&times;</a>
-				<p>You must be verified before you can pay for this apartment.</p>
-			</div>
-		</div>
-		<br><br><br><br><br><br>
-
-		<div class="">
-			<div class="alert alert-danger alert-dismissable fade in bg-red1 c-white text-center p-t-10 h-40 mh-100p">
-				<a href="#" class="close c-red h-20 width-20 bd-50p bg-white opacity-12" data-dismiss="alert" aria-label="close">&times;</a>
-				<p>Your prorile must be 80% complete before you can book or list apartments.</p>
-			</div>
-		</div>
-		<br><br><br><br><br><br>
-
-		<div class="">
-			<div class="alert alert-danger alert-dismissable fade in bg-red1 c-white text-center p-t-10 h-40 mh-100p">
-				<a href="#" class="close c-red h-20 width-20 bd-50p bg-white opacity-12" data-dismiss="alert" aria-label="close">&times;</a>
-				<p>Your prorile must be 80% complete before you can book or list apartments.</p>
-			</div>
-		</div>
-		<br><br><br><br><br><br>
-
-		<div class="">
-			<div class="alert alert-danger alert-dismissable fade in bg-red1 c-white text-center p-t-10 h-40 mh-100p">
-				<a href="#" class="close c-red h-20 width-20 bd-50p bg-white opacity-12" data-dismiss="alert" aria-label="close">&times;</a>
-				<p>Your prorile must be 80% complete before you can book or list apartments.</p>
-			</div>
-		</div>
-		<br><br><br><br><br><br>
 	</section>
-
-				
 
 	<footer class="nb-footer">
 		<div class="container">
