--- a/public/template/user_profile_error.html
+++ b/public/template/user_profile_error.html
@@ -16,11 +16,8 @@
 	<!-- CUSTOM STYLES -->
 	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/index.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/ip_responsive.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/checkbox.css">
 
-	<link rel="stylesheet" type="text/css" href="sweetalert-master/dist/sweetalert.css">
-		<script type="text/javascript" src="sweetalert-master/dist/sweetalert.min.js"></script>
 	<!-- WEBFONT -->
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway">
 
@@ -38,7 +35,7 @@
 			<div class="container-fluid">
 				<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+					<button type="button" class="navbar-toggle bg-black" data-toggle="collapse" data-target=".navbar-ex1-collapse">
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -49,7 +46,7 @@
 		
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse navbar-ex1-collapse p-t-10">
-					<ul class="nav navbar-nav navbar-right f-1">
+					<ul class="nav navbar-nav navbar-right f-1 bg-white">
 						<li><a href="our_apartment2.html">Our homes</a></li>
 						<li><a href="list_apartment.html" class="">List apartment</a></li>
 
@@ -116,13 +113,13 @@
 			<div class="row">
 				<div class="col-md-3">
 					<div class="bd-brand">
-						<p class="p-l-10 p-18 h-50 c-brown">Dashboard</p>
+						<p class="p-l-10 p-18 h-50 c-brown"><a href="user_profile.html"> Dashboard</p></a>
 					</div>
 					<div class="bd-brand">
-						<p class="p-l-10 p-18 h-50">Rent Apartments</p>
+						<p class="p-l-10 p-18 h-50"><a href="viewing_page.html"> Rent Apartments</p></a>
 					</div>
 					<div class="bd-brand">
-						<p class="p-l-10 p-18 h-50">List Apartments</p>
+						<p class="p-l-10 p-18 h-50"><a href="user_profile_listing.html"> List Apartments</p></a>
 					</div>
 				</div>
 
@@ -277,7 +274,7 @@
 								</div>
 							</div>
 							<div class="col-md-5">
-								<button type="submit" class="h-35 bgc f-16 w-500 no-bd c-white bd-4 mwidth-100 width-130 text-center" name="">Subscribe</button>
+								<a href="" type="submit" class="h-35 bg-brown f-16 w-500 no-bd c-white bd-4 mwidth-100 width-130 text-center dis-inline-b p-t-5" name="">Subscribe</a>
 							</div>
 						</div>
 					</form>
@@ -298,7 +295,7 @@
 							<p>
 								<a href="payment.html">Payment structure</a>
 							</p>
-							<p class=""><a href=""><span> Terms of Use</span></a>
+							<p class=""><a href="term.html"><span> Terms of Use</span></a>
 							</p>
 						</div>
 
