--- a/public/template/user_profile_listing.html
+++ b/public/template/user_profile_listing.html
@@ -35,7 +35,7 @@
 			<div class="container-fluid">
 				<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+					<button type="button" class="navbar-toggle bg-black" data-toggle="collapse" data-target=".navbar-ex1-collapse">
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -46,7 +46,7 @@
 		
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse navbar-ex1-collapse p-t-10">
-					<ul class="nav navbar-nav navbar-right f-1">
+					<ul class="nav navbar-nav navbar-right f-1 bg-white">
 						<li><a href="our_apartment2.html">Our apartment</a></li>
 						<li><a href="list_apartment.html" class="">List apartment</a></li>
 
@@ -69,7 +69,7 @@
 				<div class="row">
 					<div class="col-md-2"></div>
 					<div class="col-md-8">
-						<ul class="nav navbar-nav">
+						<ul class="nav navbar-nav bg-white">
 							<li class="active c-brown">
 								<a href="user_profile_listing.html">Listings</a>
 							</li>
@@ -98,13 +98,13 @@
 			<div class="row">
 				<div class="col-md-3">
 					<div class="bd-brand">
-						<p class="p-l-10 p-18 h-50">Dashboard</p>
+						<p class="p-l-10 p-18 h-50 "><a href="user_profile.html"> Dashboard</p></a>
 					</div>
 					<div class="bd-brand">
-						<p class="p-l-10 p-18 h-50 ">Rent Apartments</p>
+						<p class="p-l-10 p-18 h-50 "><a href="viewing_page.html"> Rent Apartments</p></a>
 					</div>
 					<div class="bd-brand">
-						<p class="p-l-10 p-18 h-50 c-brown">List Apartments</p>
+						<p class="p-l-10 p-18 h-50 c-brown"><a href="user_profile_listing.html"> List Apartments</p></a>
 					</div>
 				</div>
 
@@ -189,13 +189,13 @@
 							<hr class="m-r-37p m-t-0 mm-r-0">
 							<br>
 							<div class="row">
-							 	<div class="col-md-7">
-									<div  class="bd-brand1 width-612 mwidth-100 p-l-50 p-t-15 p-b-15">
+								<div class="col-md-7">
+									<a href="add_listing.html"><div  class="bd-brand1 width-612 mwidth-100 p-l-50 p-t-15 p-b-15">
 										<span class="reft">
 											<i class="fa fa-plus fa-2x c-brown"></i>
 											
 										</span><span class="f-24 c-brown">Add a listing</span>
-									</div>
+									</div></a>
 								</div>
 								<div class="col-md-5"></div>
 							</div>
@@ -224,7 +224,7 @@
 								</div>
 							</div>
 							<div class="col-md-5">
-								<button type="submit" class="h-35 bgc f-16 w-500 no-bd c-white bd-4 mwidth-100 width-130 text-center" name="">Subscribe</button>
+								<a href="" type="submit" class="h-35 bg-brown f-16 w-500 no-bd c-white bd-4 mwidth-100 width-130 text-center dis-inline-b p-t-5" name="">Subscribe</a>
 							</div>
 						</div>
 					</form>
@@ -245,7 +245,7 @@
 							<p>
 								<a href="payment.html">Payment structure</a>
 							</p>
-							<p class=""><a href=""><span> Terms of Use</span></a>
+							<p class=""><a href="term.html"><span> Terms of Use</span></a>
 							</p>
 						</div>
 
